--- a/index.html
+++ b/index.html
@@ -10,11 +10,18 @@
     </head>
     <body>
         <header>
-            <h1>Asigment 2: NPM AND MORE...</h1>
+            <h1>Asigment 2: NPM, NODE, GIT VERSION WITH DATES AND MORE...</h1>
         </header>
         <main>
             <div>
-                
+                <ul>
+                    <li>Hej, my name is Sheila Aliaga</li>
+                    <li>Today is: Tuesday 14/Feb/2023</li>
+                    <li>I started in JavaScript-ramverk 15 days ago.</li>
+                    <li>npm & node: npm/8.19.3 node/v18.13.0 win32 x64 workspaces/false</li>
+                    <li>Git version: git version 2.38.1.windows.1
+</li>
+                </ul>
             </div>
         </main>
     </body>
